xml/src2/objects/Certification_Updates__c.object
<CustomObject>
    <description>Certification Updates for Education Certifications</description>
    <fields>
        <fullName>Annual_Conference_Approved_Date__c</fullName>
        <description>The date the contact was approved by the annual conference.</description>
        <inlineHelpText>Enter date that Annual Conference approved the certification.</inlineHelpText>
        <label>Annual Conference Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approving_Conference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approving Annual conference</description>
        <inlineHelpText>Enter Name of Annual Conference that approved the certification</inlineHelpText>
        <label>Approving Conference</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Certification Updates</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Renewal_Status_Description__c</fullName>
        <label>Certification/Renewal Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certification_Renewal_Status__c</fullName>
        <label>Certification/Renewal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Involuntarily Declined Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntarily Declined Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education_Certification__c</fullName>
        <description>Approving conference for Contact Education Certification</description>
        <label>Education - Certification</label>
        <referenceTo>Certification_in_Specialized_Ministry__c</referenceTo>
        <relationshipName>Renewals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewal_Year__c</fullName>
        <description>This is the year the certification should be renewed based on Annual Conference Approved Date and Renewed Date.</description>
        <formula>IF(OR( ISPICKVAL(Year__c,&apos;Missing&apos;) , ISPICKVAL(Year__c,&apos; &apos;))
,IF(ISBLANK(Annual_Conference_Approved_Date__c)
,NULL
, IF(MOD(YEAR(Annual_Conference_Approved_Date__c) + 2, 2) = 0
,TEXT(YEAR(Annual_Conference_Approved_Date__c) + 2)
,TEXT(YEAR(Annual_Conference_Approved_Date__c) + 1)
))
,IF(MOD(VALUE(TEXT(Year__c ))+ 2, 2) = 0
 ,TEXT(VALUE(TEXT(Year__c)) + 2)
  ,TEXT(VALUE(TEXT(Year__c)) + 1)
))</formula>
        <inlineHelpText>This is the year the certification should be renewed based on Annual Conference Approved Date and Renewed Date.</inlineHelpText>
        <label>Renewal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_As_Number__c</fullName>
        <formula>TEXT(Year__c)</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Approving Conference Renewed Year</description>
        <inlineHelpText>Enter year that Annual Conference renewed the certification</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Certification Updates</label>
    <nameField>
        <displayFormat>Certup-{00000000}</displayFormat>
        <label>Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AppDate_Before_ConfApproved_Date_Rule</fullName>
        <active>true</active>
        <description>If Application Date and Conference Approval Date are entered then Application Date must be prior to Approval Date.</description>
        <errorConditionFormula>(AND(NOT(ISBLANK( Education_Certification__r.Application_Date__c )), NOT(ISBLANK(Annual_Conference_Approved_Date__c  ))) &amp;&amp;
(Annual_Conference_Approved_Date__c  &lt; Education_Certification__r.Application_Date__c))</errorConditionFormula>
        <errorMessage>Annual conference Approved Date should be after the Education Certification Application Date</errorMessage>
    </validationRules>
</CustomObject>